--- a/project-2.html
+++ b/project-2.html
@@ -15,11 +15,7 @@
           <div class="">
             <!-- Nav bar -->
             <nav class="p-10 flex items-center justify-between bg-black py-5">
-              <img
-                class=""
-                src="./Project-2 Hosting Site/assets/Logo.svg"
-                alt="Logo"
-              />
+              <img class="" src="./assets/Logo.svg" alt="Logo" />
               <div>
                 <ul class="flex text-gray-300">
                   <li class="">Hosting</li>
@@ -37,7 +33,7 @@
                 </p>
               </div>
             </nav>
-            <!-- after nav  -->
+            <!-- After nav  -->
             <div class="p-10 bg-gray-900 text-white flex justify-between pt-20">
               <!-- first section -->
               <div class="w-[30em]">
@@ -68,7 +64,7 @@
               <div class="">
                 <img
                   class="w-[80%]"
-                  src="./Project-2 Hosting Site/assets/Illustrations/Group 238502.svg"
+                  src="./assets/Illustrations/Group 238502.svg"
                   alt="group img"
                 />
               </div>
@@ -77,22 +73,10 @@
         </div>
         <!-- Border -->
         <div class="flex justify-between px-40 py-5 bg-black">
-          <img
-            src="./Project-2 Hosting Site/assets/Logo-light.svg"
-            alt="light logo"
-          />
-          <img
-            src="./Project-2 Hosting Site/assets/Logo-light.svg"
-            alt="light logo"
-          />
-          <img
-            src="./Project-2 Hosting Site/assets/Logo-light.svg"
-            alt="light logo"
-          />
-          <img
-            src="./Project-2 Hosting Site/assets/Logo-light.svg"
-            alt="light logo"
-          />
+          <img src="./assets/Logo-light.svg" alt="light logo" />
+          <img src="./assets/Logo-light.svg" alt="light logo" />
+          <img src="./assets/Logo-light.svg" alt="light logo" />
+          <img src="./assets/Logo-light.svg" alt="light logo" />
         </div>
         <!-- 2nd page -->
         <div class="p-10">
@@ -109,7 +93,7 @@
             <div class="text-center border p-10 rounded-[20px]">
               <img
                 class="relative left-[5em] w-20"
-                src="./Project-2 Hosting Site/assets/Icons/fast.svg"
+                src="./assets/Icons/fast.svg"
                 alt="Fast"
               />
               <div class="w-60 mt-5">
@@ -125,7 +109,7 @@
             >
               <img
                 class="relative left-[5em] w-20"
-                src="./Project-2 Hosting Site/assets/Icons/signal.svg"
+                src="./assets/Icons/signal.svg"
                 alt="Fast"
               />
               <div class="w-60 mt-5">
@@ -139,7 +123,7 @@
             <div class="text-center border p-10 rounded-[20px]">
               <img
                 class="relative left-[5em] w-20"
-                src="./Project-2 Hosting Site/assets/Icons/heart.svg"
+                src="./assets/Icons/heart.svg"
                 alt="Fast"
               />
               <div class="w-60 mt-5">
@@ -164,7 +148,7 @@
               >
                 <p class="">Our main features</p>
                 <img
-                  src="./Project-2 Hosting Site/assets/Icons/Group 238511.svg"
+                  src="./assets/Icons/Group 238511.svg"
                   alt="Negetive"
                   class="w-6"
                 />
@@ -174,7 +158,7 @@
               >
                 <p class="">Speed optimization</p>
                 <img
-                  src="./Project-2 Hosting Site/assets/Icons/Group 238512.svg"
+                  src="./assets/Icons/Group 238512.svg"
                   alt="Negetive"
                   class="w-6"
                 />
@@ -184,7 +168,7 @@
               >
                 <p class="">Speed optimization</p>
                 <img
-                  src="./Project-2 Hosting Site/assets/Icons/Group 238512.svg"
+                  src="./assets/Icons/Group 238512.svg"
                   alt="Negetive"
                   class="w-6"
                 />
@@ -194,7 +178,7 @@
               >
                 <p class="">Speed optimization</p>
                 <img
-                  src="./Project-2 Hosting Site/assets/Icons/Group 238512.svg"
+                  src="./assets/Icons/Group 238512.svg"
                   alt="Negetive"
                   class="w-6"
                 />
@@ -204,7 +188,7 @@
               >
                 <p class="">Speed optimization</p>
                 <img
-                  src="./Project-2 Hosting Site/assets/Icons/Group 238512.svg"
+                  src="./assets/Icons/Group 238512.svg"
                   alt="Negetive"
                   class="w-6"
                 />
@@ -258,7 +242,7 @@
           <div class="bg-gray-900 mt-20">
             <div class="flex justify-between mx-10 pt-40">
               <img
-                src="./Project-2 Hosting Site/assets/Icons/arrow-left.svg"
+                src="./assets/Icons/arrow-left.svg"
                 alt=" left"
                 class="h-20"
               />
@@ -268,7 +252,7 @@
                 Hosting your website with the service we provide
               </p>
               <img
-                src="./Project-2 Hosting Site/assets/Icons/arrow-right.svg"
+                src="./assets/Icons/arrow-right.svg"
                 alt="right"
                 class="h-20"
               />
@@ -287,52 +271,31 @@
                   </p>
                   <hr class="my-8 h-[4px] bg-black" />
                   <div class="flex">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src=".assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Up to 16,000 Visitor/month</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src=".assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">500Mb SSd Disk space</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src=".assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Unlimited Bandwidth</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src=".assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Unlimited databases</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Instant backup</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">! Email Account</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Domain</p>
                   </div>
                   <p
@@ -353,52 +316,31 @@
                   </p>
                   <hr class="my-8 h-[4px] bg-black" />
                   <div class="flex">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/white-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/white-tick.svg" alt="tick" />
                     <p class="ml-3">Up to 36,000 Visitor/month</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/white-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/white-tick.svg" alt="tick" />
                     <p class="ml-3">500Mb SSd Disk space</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/white-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/white-tick.svg" alt="tick" />
                     <p class="ml-3">Unlimited Bandwidth</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/white-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/white-tick.svg" alt="tick" />
                     <p class="ml-3">Unlimited databases</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/white-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/white-tick.svg" alt="tick" />
                     <p class="ml-3">Instant backup</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/white-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/white-tick.svg" alt="tick" />
                     <p class="ml-3">Unlimited Account</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/white-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/white-tick.svg" alt="tick" />
                     <p class="ml-3">unlimited Addon Domain</p>
                   </div>
                   <p
@@ -419,52 +361,31 @@
                   </p>
                   <hr class="my-8 h-[4px] bg-black" />
                   <div class="flex">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Up to 200,000 Visitor/month</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">500Mb SSd Disk space</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Unlimited Bandwidth</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Unlimited databases</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Instant backup</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Unlimited Account</p>
                   </div>
                   <div class="flex mt-2">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/blue-tick.svg"
-                      alt="tick"
-                    />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Free Domain</p>
                   </div>
                   <p
@@ -496,11 +417,11 @@
                 >
                   <div class="flex">
                     <img
-                      src="./Project-2 Hosting Site/assets/Icons/vuesax/bulk/Vector.svg"
+                      src="./assets/Icons/vuesax/bulk/Vector.svg"
                       alt="one"
                     />
                     <img
-                      src="./Project-2 Hosting Site/assets/Icons/vuesax/bulk/Vector-1.svg"
+                      src="./assets/Icons/vuesax/bulk/Vector-1.svg"
                       alt="one"
                     />
                   </div>
@@ -514,26 +435,11 @@
                     fantastic speed.
                   </div>
                   <div class="mt-5 flex">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/Star.svg"
-                      alt="Star"
-                    />
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/Star.svg"
-                      alt="Star"
-                    />
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/Star.svg"
-                      alt="Star"
-                    />
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/Star.svg"
-                      alt="Star"
-                    />
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/Star.svg"
-                      alt="Star"
-                    />
+                    <img src="./assets/Icons/Star.svg" alt="Star" />
+                    <img src="./assets/Icons/Star.svg" alt="Star" />
+                    <img src="./assets/Icons/Star.svg" alt="Star" />
+                    <img src=".//assets/Icons/Star.svg" alt="Star" />
+                    <img src=".assets/Icons/Star.svg" alt="Star" />
                   </div>
                 </div>
               </div>
@@ -543,11 +449,11 @@
                 >
                   <div class="flex">
                     <img
-                      src="./Project-2 Hosting Site/assets/Icons/vuesax/bulk/Vector.svg"
+                      src="./assets/Icons/vuesax/bulk/Vector.svg"
                       alt="one"
                     />
                     <img
-                      src="./Project-2 Hosting Site/assets/Icons/vuesax/bulk/Vector-1.svg"
+                      src="./assets/Icons/vuesax/bulk/Vector-1.svg"
                       alt="one"
                     />
                   </div>
@@ -561,26 +467,11 @@
                     fantastic.
                   </div>
                   <div class="mt-5 flex">
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/Star.svg"
-                      alt="Star"
-                    />
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/Star.svg"
-                      alt="Star"
-                    />
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/Star.svg"
-                      alt="Star"
-                    />
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/Star.svg"
-                      alt="Star"
-                    />
-                    <img
-                      src="./Project-2 Hosting Site/assets/Icons/Star.svg"
-                      alt="Star"
-                    />
+                    <img src="./ssets/Icons/Star.svg" alt="Star" />
+                    <img src="./assets/Icons/Star.svg" alt="Star" />
+                    <img src="./assets/Icons/Star.svg" alt="Star" />
+                    <img src="./assets/Icons/Star.svg" alt="Star" />
+                    <img src="./assets/Icons/Star.svg" alt="Star" />
                   </div>
                 </div>
               </div>
@@ -651,13 +542,13 @@
                 </div>
               </div>
               <hr class="bg-gray-500 my-10 p-1 mx-20" />
-              <img src="./Project-2 Hosting Site/assets/Logo.svg" alt="Logo" />
+              <img src="./assets/Logo.svg" alt="Logo" />
             </div>
           </div>
         </div>
       </div>
       <img
-        src="./Project-2 Hosting Site/assets/Rainbow Thank you Instagram Post.png"
+        src="./assets/Rainbow Thank you Instagram Post.png"
         alt="Thanks"
         class="w-[50em] relative left-60"
       />
