--- a/project-2.html
+++ b/project-2.html
@@ -271,19 +271,19 @@
                   </p>
                   <hr class="my-8 h-[4px] bg-black" />
                   <div class="flex">
-                    <img src=".assets/Icons/blue-tick.svg" alt="tick" />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Up to 16,000 Visitor/month</p>
                   </div>
                   <div class="flex mt-2">
-                    <img src=".assets/Icons/blue-tick.svg" alt="tick" />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">500Mb SSd Disk space</p>
                   </div>
                   <div class="flex mt-2">
-                    <img src=".assets/Icons/blue-tick.svg" alt="tick" />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Unlimited Bandwidth</p>
                   </div>
                   <div class="flex mt-2">
-                    <img src=".assets/Icons/blue-tick.svg" alt="tick" />
+                    <img src="./assets/Icons/blue-tick.svg" alt="tick" />
                     <p class="ml-3">Unlimited databases</p>
                   </div>
                   <div class="flex mt-2">
@@ -439,7 +439,7 @@
                     <img src="./assets/Icons/Star.svg" alt="Star" />
                     <img src="./assets/Icons/Star.svg" alt="Star" />
                     <img src=".//assets/Icons/Star.svg" alt="Star" />
-                    <img src=".assets/Icons/Star.svg" alt="Star" />
+                    <img src="./assets/Icons/Star.svg" alt="Star" />
                   </div>
                 </div>
               </div>
@@ -467,7 +467,7 @@
                     fantastic.
                   </div>
                   <div class="mt-5 flex">
-                    <img src="./ssets/Icons/Star.svg" alt="Star" />
+                    <img src="./assets/Icons/Star.svg" alt="Star" />
                     <img src="./assets/Icons/Star.svg" alt="Star" />
                     <img src="./assets/Icons/Star.svg" alt="Star" />
                     <img src="./assets/Icons/Star.svg" alt="Star" />
@@ -501,15 +501,15 @@
                   placeholder="E-mail Address"
                 />
                 <input
-                  type="text"
+                  type="password"
                   class="bg-gray-500 text-center rounded-full h-16 w-72"
                   placeholder="Password"
                 />
-                <input
-                  type="text"
-                  class="bg-sky-500 text-center rounded-full h-16 w-48 text-xl font-semibold"
-                  placeholder="Sign Up"
-                />
+                <p
+                  class="bg-gray-500 text-center rounded-full inline px-10 py-5"
+                >
+                  Sign Up
+                </p>
               </div>
               <hr class="bg-gray-500 my-10 p-1 mx-20" />
               <div class="py-10 flex justify-between">
