--- a/project-2.html
+++ b/project-2.html
@@ -478,7 +478,7 @@
             </div>
           </div>
           <hr class="bg-blue-500 h-2 my-8" />
-          <!-- 5no pages -->
+          <!-- 5No pages -->
           <div class="text-white bg-black pt-20 p-10">
             <p
               class="text-5xl text-center w-[20em] ml-28 font-semibold leading-[1.2em]"
