--- a/project-2.html
+++ b/project-2.html
@@ -47,14 +47,14 @@
                   security is very well maintained,and obcourse supported by
                   reliable servers.
                 </p>
-                <div class="flex mt-10">
+                <div class="m-8">
                   <p
-                    class="bg-blue-500 py-3 px-3 rounded-full w-32 text-center font-semibold"
+                    class="ml-10 px-8 drop-shadow-xl py-3 bg-blue-700 rounded-full xt-center inline border border-white"
                   >
                     Get Started
                   </p>
                   <p
-                    class="ml-10 border border-solid border-white py-3 px-3 rounded-full w-32 text-center font-semibold"
+                    class="ml-10 px-7 drop-shadow-xl py-3 bg-white text-blue-700 border border-solid border-blue-700 border-2 rounded-full text-center inline"
                   >
                     Try Start Free
                   </p>
@@ -97,7 +97,9 @@
                 alt="Fast"
               />
               <div class="w-60 mt-5">
-                <p class="text-xl font-semibold">Faster hosting process</p>
+                <p class="text-xl font-semibold drop-shadow-2xl">
+                  Faster hosting process
+                </p>
                 <p class="mt-6">
                   We can speed up the creation of your website,which is made
                   directly by the experts
@@ -113,7 +115,9 @@
                 alt="Fast"
               />
               <div class="w-60 mt-5">
-                <p class="text-xl font-semibold">Speed to accessess faster</p>
+                <p class="text-xl font-semibold drop-shadow-xl">
+                  Speed to accessess faster
+                </p>
                 <p class="mt-6 text-md">Excellent network</p>
                 <p>
                   infrastructure and hardware to support fast and stable access
@@ -506,7 +510,7 @@
                   placeholder="Password"
                 />
                 <p
-                  class="bg-gray-500 text-center rounded-full inline px-10 py-5"
+                  class="bg-blue-500 text-center rounded-full inline px-12 py-5 font-bold"
                 >
                   Sign Up
                 </p>
